fix scrollbar overflow issue

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
   font-family: 'Ubuntu';
   background: var(--background-color);
   margin: 0;
+  overflow-x: hidden;
 }
 
 .wrapper {
